fixed portfolio spacing

--- a/src/App.css
+++ b/src/App.css
@@ -107,3 +107,7 @@ header nav ul li a {
 	margin-left: 20px;
 	font-size: 24px;
 }
+
+.project-border {
+	border: rgba(255, 255, 255, 0.1) solid 5px;
+}
